--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BASE_URL=https://timothy-backend.onrender.com/api/v1
+VITE_BASE_URL=https://api.fasifys.com/api/v1
+# VITE_BASE_URL=https://timothy-backend.onrender.com/api/v1
