--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 VITE_BASE_URL=https://api.fasifys.com/api/v1
 # VITE_BASE_URL=https://timothy-backend.onrender.com/api/v1
+VITE_FIREBASE_API_KEY=AIzaSyDcjsKqIaSUnRzYFQMhsbpO42NH5D9I5HQ
+VITE_FIREBASE_AUTH_DOMAIN=timothy-6314c.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=timothy-6314c
+VITE_FIREBASE_STORAGE_BUCKET=timothy-6314c.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=554664409065
+VITE_FIREBASE_APP_ID=1:554664409065:web:409e6d0a8690f415df3d78
